# DQMaRC

./: .buildinfo  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DQMaRC_ShinyLiveEditor_link  MANIFEST.in  README.md  README.rst  SUPPORT.md  genindex.html  index.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yaml  requirements.txt  search.html  searchindex.js  setup.py  third_party_licenses.html
.github/workflows/: publish_conda.yml  publish_pypi.yml  publish_pypi_conda.yml  publish_testpypi.yml  sphinx-build.yml  test.yml  unit_tests.yml
DQMaRC/: Dimension.py  Validity.py  __version__.py
DQMaRC/data/: toy_df_DQ_results_full.csv  toydf_subset_test_params_24.05.16.csv
DQMaRC/notebooks/: Backend_Tutorial.ipynb
JOSS_paper/: paper.bib  paper.md
_modules/: UtilitiesDQMaRC.html  app.html  index.html
_modules/DQMaRC/: Accuracy.html  Completeness.html  Consistency.html  DataQuality.html  Dimension.html  Timeliness.html  Uniqueness.html  Validity.html
_sources/: index.rst
_sources/api_reference/: Accuracy.rst  Dimension.rst  Timeliness.rst  Uniqueness.rst  Validity.rst
_static/css/: custom.css
api_reference/: Accuracy.html  Completeness.html  Consistency.html  DataQuality.html  Dimension.html  ShinyApp.html  Timeliness.html  Uniqueness.html  UtilitiesDQMaRC.html  Validity.html  source.html
conda-recipe/: conda_build_config.yaml  meta.yaml
conda_recipe/: meta.yaml
docs/: docs_requirements.txt
getting_started/: Frontend_Tutorial.html  deployment_guide.html  welcome_page.html
tests/: test_validity.py
(+14 files in other folders)
